Fix overlapping issue with quiz section

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -64,7 +64,7 @@ header {
     white-space: nowrap;
     position: absolute;
     top: 0;
-    margin-top: 4%;
+    margin-top: 2%;
     border: 2px;
     background-color: darkgray;
     border-radius: 8%;
@@ -315,7 +315,7 @@ button:hover {
     }
 
     h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     body .quiz-section {
@@ -323,6 +323,7 @@ button:hover {
         font-size: 2rem;
         width: 120vh;
         height: auto;
+        margin-top: 10%;
     }
 
     ul li label {
@@ -331,7 +332,7 @@ button:hover {
     }
 
     #logo {
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-align: center;
     }
 
@@ -381,6 +382,7 @@ button:hover {
     body .quiz-section {
         font-size: 1rem;
         width: 100vh;
+        margin-top: 13%;
     }
 
     button {
